@@ -1,60 +1,15 @@
-
-bin_PROGRAMS = make_translation merge_translations 
-
-if LIBPNG
-bin_PROGRAMS += exploder cutter
-endif
-
-#############################################################################
-#    Translation Tools                                                      #
-#############################################################################
-
-AM_CXXFLAGS = @SDL_CFLAGS@ -DWESNOTH_PATH=\"$(pkgdatadir)\" -I../ \
-	      -DLOCALEDIR=\"$(LOCALEDIR)\"
-AM_LDFLAGS = @SDL_LIBS@
-
-if LIBPNG
-	AM_CXXFLAGS += @PNG_CFLAGS@
-endif
-
-#############################################################################
-#    Make Translation                                                       #
-#############################################################################
-
-make_translation_SOURCES = make_translation.cpp \
-			   ../config.cpp \
-			   ../filesystem.cpp \
-			   ../game_config.cpp \
-			   ../log.cpp \
-			   ../server/variable.cpp \
-			   ../config.hpp \
-			   ../filesystem.hpp \
-			   ../game_config.hpp \
-			   ../log.hpp \
-		           ../gettext.cpp
-
-
-#############################################################################
-#    Merge Translations                                                     #
-#############################################################################
-
-merge_translations_SOURCES = merge_translations.cpp \
-			     ../config.cpp \
-			     ../filesystem.cpp \
-			     ../game_config.cpp \
-			     ../log.cpp \
-			     ../server/variable.cpp \
-			     ../config.hpp \
-			     ../filesystem.hpp \
-			     ../game_config.hpp \
-			     ../log.hpp \
-		             ../gettext.cpp
-
 #############################################################################
 #    Castle building helpers                                                #
 #############################################################################
 
 if LIBPNG
+
+bin_PROGRAMS = exploder cutter
+
+AM_CXXFLAGS = @SDL_CFLAGS@ @PNG_CFLAGS@ -DWESNOTH_PATH=\"$(pkgdatadir)\" -I../ \
+	      -DLOCALEDIR=\"$(LOCALEDIR)\"
+AM_LDFLAGS = @SDL_LIBS@
+
 
 exploder_SOURCES = exploder.cpp \
 		   exploder_utils.cpp \
@@ -92,4 +47,3 @@ exploder_LDFLAGS = @SDL_LIBS@ @SDL_IMAGE_LIBS@ @PNG_LIBS@
 cutter_LDFLAGS = @SDL_LIBS@ @SDL_IMAGE_LIBS@ @PNG_LIBS@
 
 endif
-
