@@ -51,6 +51,7 @@ CVS HEAD:
  * fix sign glitch in The Rise of Wesnoth
  * fix map in 'A New Land' in The Rise of Wesnoth
  * code cleanups
+ * remove obsolete tools: make_translation merge_translations
  * remove old unused images:
    * time-of-day
 
